--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -22,7 +22,7 @@
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=number]:focus, input[type=textarea]:focus{
   width: 80%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -32,7 +32,7 @@ input[type=text], input[type=password] {
 
 }
 
-input[type=text]:focus, input[type=password]:focus {
+input[type=text]:focus, input[type=password]:focus, input[type=number]:focus, input[type=textarea]:focus{
   background-color: #ddd;
   outline: none;
 }
@@ -106,6 +106,8 @@ a {
   width: 100px;
 }
 }
-input .ng-tocuhed .ng-invalid{
-  border: 1px solid red;
+.validation-error {
+  text-align: initial;
+  color: red;
+  margin-left: 6%;
 }
