--- a/src/app/listview/listview.component.html
+++ b/src/app/listview/listview.component.html
@@ -24,7 +24,7 @@
   <div class="child-felx" style="flex-grow: 4">
     <h3>Pie Chart</h3>
 
-    <div id="piechart"></div>
+
 
     <!-- <div class="pie">
       <ejs-accumulationchart id="chart-container" [legendSettings]='legendSettings' class="piechart">
@@ -39,7 +39,16 @@
     </div> -->
 
     <body>
-      <div class="piechart"></div>
+      <div class="piechart">
+       <!-- <div>
+         <h4>Male 40%</h4>
+       </div>
+       <br>
+       <div>
+        <h4>Female 60%</h4>
+      </div> -->
+
+      </div>
   </body>
   </div>
 </div>
